<resources>
    <string name="app_name">RosEdu</string>
    <string name="help_title">Требования для авторизации</string>
    <string name="help_description">Для использования “РОССЕТИ Тренажер” вам необходимо заполнить два поля \n
        1. В поле “Введите ФИО”  вам необходимо ввести вашу фамилию и имя.\n
        2. В поле “Номер учебной группы”  введите номер группы куда вас зачислили.\n
        3. Нажмите ‘ВОЙТИ”
</string>

    <!--Auth-->
    <string name="auth_fio_hint">Введите ФИО</string>
    <string name="auth_group_hint">Номер учебной группы</string>
    <string name="auth_login">Войти</string>
    <string name="auth_dont_know">Не знаю что делать</string>
    <string name="toolbar_ied_goose_title">Настройка IED на прием-передачу GOOSE сообщений</string>
    <string name="select_device_title">Выберите устройства</string>

    <!--Main Task-->
    <string name="device_title"
        translatable="true">Устройство: %s</string>
    <string name="device_type"
        translatable="true">Тип: %s</string>

    <!--Main Task Network Settings-->
    <string name="network_settings_title">Сетевые настройки</string>

    <!--Main Task Goose Settings-->
    <string name="goose_settings_title">Подписка GOOSE-сообщений</string>
    <string name="goose_settings_exit_ied2">Выходы IED2</string>
    <string name="goose_settings_exit_ied1">Выходы IED1</string>
    <string name="goose_settings_enter_ied1">Входы IED1</string>
    <string name="goose_settings_enter_ied2">Входы IED2</string>

    <string name="goose_settings_enter_1">Вход 1</string>
    <string name="goose_settings_enter_2">Вход 2</string>
    <string name="goose_settings_enter_3">Вход 3</string>
    <string name="goose_settings_exit_1">Выход 1</string>
    <string name="goose_settings_exit_2">Выход 2</string>
    <string name="goose_settings_exit_3">Выход 3</string>

    <!--Main Task Device Settings-->
    <string name="device_settings_title">Настройки устройства</string>

    <string name="device_settings_gcb_name">Имя GCB</string>
    <string name="device_settings_mac_address">MAC адрес</string>
    <string name="device_settings_max_time">Max Time</string>
    <string name="device_settings_min_time">Min Time</string>
    <string name="device_settings_goose_id">GOOSE ID</string>
    <string name="device_settings_app_id">APP ID</string>
    <string name="device_settings_vlan_id">VLAN ID</string>


    <!--Common-->
    <string name="common_ip_address">IP адрес</string>
    <string name="common_ip_mask">Маска подсети</string>
    <string name="common_description">Описание</string>
    <string name="common_accept">Применить</string>
    <string name="common_understand">Понятно</string>
    <string name="common_finish">Закончить</string>

    <!--Descriptions-->
    <string name="gcb_description">GOOSE CONTROL BLOCK</string>
    <string name="mac_address_description">Mac адрес для мультикаст-рассылки</string>
    <string name="max_time_description">Задается временной интервал между отправкой штатных GOOSE - сообщений</string>
    <string name="min_time_description">Задается минимальное время между отправками дублирующих GOOSE - сообщений</string>
    <string name="gooseId_description">Идентификатор GOOSE</string>
    <string name="appId_description">Идентификатор приложения для GOOSE - сообщений действующих на отключение коммутационных аппаратов</string>
    <string name="vlanId_description">Идентификатор виртуальной подсети VLAN ID</string>

    <string name="ip_address_description">В сети Интернет требуется глобальная уникальность адреса; в случае работы в локальной сети требуется уникальность адреса в пределах сети. В версии протокола IPv4 IP-адрес имеет длину 4 байта, а в версии протокола IPv6 — 16 байт.</string>
    <string name="mask_description">Маска подсети — битовая маска для определения по IP-адресу адреса подсети и адреса узла (хоста, компьютера, устройства) этой подсети. В отличие от IP-адреса маска подсети не является частью IP-пакета.</string>
    <string name="subscription_btn_title">подписка goose</string>
    <string name="send_goose_btn_title">Отправка goose</string>
</resources>