<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainTaskContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/toolbarContainer"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/toolbar_ied_goose_title"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubscriptionGoose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/subscription_btn_title"
            android:textSize="13sp"
            app:backgroundTint="#2196F3"
            app:cornerRadius="13dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSendGoose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/send_goose_btn_title"
            android:textSize="13sp"
            app:backgroundTint="#8BC34A"
            app:cornerRadius="13dp" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/containerListDevice"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarContainer" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#8FFFFFFF"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarContainer" />

    <ru.leadersofdigital.rosedu.core.scene.SceneFrameLayout
        android:id="@+id/containerScene"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/mercury"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/toolbarContainer" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>