<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_rounded"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:overScrollMode="never"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="32dp">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/device_settings_title"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="24dp"
                android:background="@color/divider_color"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

            <View
                android:id="@+id/view"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/bg_light_blue_circle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider1" />

            <ImageView
                android:id="@+id/imageViewCommutator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_rza"

                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/view" />

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:orientation="vertical"

                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/view">

                <TextView
                    android:id="@+id/textViewDeviceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    tools:text="Устройство: Пром коммут" />

                <TextView
                    android:id="@+id/textViewDeviceType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:textColor="#8A000000"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/view"
                    app:layout_constraintStart_toEndOf="@+id/view"
                    app:layout_constraintTop_toBottomOf="@+id/textViewDeviceTitle"
                    tools:text="Устройство: Пром коммут" />
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutGcb"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginEnd="42dp"
                android:hint="@string/device_settings_gcb_name"
                app:layout_constraintBottom_toBottomOf="@+id/buttonGcbDesc"
                app:layout_constraintEnd_toStartOf="@+id/buttonGcbDesc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/buttonGcbDesc"
                app:startIconDrawable="@drawable/ic_parameter"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextGcb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:nextFocusDown="@id/editTextMacAddress"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutMacAddress"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginEnd="42dp"
                android:hint="@string/device_settings_mac_address"
                app:layout_constraintBottom_toBottomOf="@+id/buttonMacAddressDesc"
                app:layout_constraintEnd_toStartOf="@+id/buttonMacAddressDesc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/buttonMacAddressDesc"
                app:startIconDrawable="@drawable/ic_parameter"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextMacAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:nextFocusDown="@id/editTextMaxTime"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutMaxTime"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginEnd="42dp"
                android:hint="@string/device_settings_max_time"
                app:layout_constraintBottom_toBottomOf="@+id/buttonMaxTimeDesc"
                app:layout_constraintEnd_toStartOf="@+id/buttonMaxTimeDesc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/buttonMaxTimeDesc"
                app:startIconDrawable="@drawable/ic_parameter"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextMaxTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:nextFocusDown="@id/editTextMinTime"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutMinTime"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginEnd="42dp"
                android:hint="@string/device_settings_min_time"
                app:layout_constraintBottom_toBottomOf="@+id/buttonMinTimeDesc"
                app:layout_constraintEnd_toStartOf="@+id/buttonMinTimeDesc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/buttonMinTimeDesc"
                app:startIconDrawable="@drawable/ic_parameter"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextMinTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:nextFocusDown="@id/editTextGooseId"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutGoose"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="42dp"
                android:layout_marginStart="40dp"
                android:hint="@string/device_settings_goose_id"
                app:layout_constraintBottom_toBottomOf="@+id/buttonIpAddressDesc"
                app:layout_constraintEnd_toStartOf="@+id/buttonIpAddressDesc"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/buttonIpAddressDesc"
                app:startIconDrawable="@drawable/ic_parameter"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextGooseId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:nextFocusDown="@id/editTextAppId"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutAppId"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="42dp"
                android:layout_marginStart="40dp"
                android:hint="@string/device_settings_app_id"
                app:layout_constraintBottom_toBottomOf="@+id/buttonAppIdDesc"
                app:layout_constraintEnd_toStartOf="@+id/buttonAppIdDesc"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/buttonAppIdDesc"
                app:startIconDrawable="@drawable/ic_parameter"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextAppId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:nextFocusDown="@id/editTextVlanId"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutVlanId"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="42dp"
                android:layout_marginStart="40dp"
                android:hint="@string/device_settings_vlan_id"
                app:layout_constraintBottom_toBottomOf="@+id/buttonVlanIdDesc"
                app:layout_constraintEnd_toStartOf="@+id/buttonVlanIdDesc"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/buttonVlanIdDesc"
                app:startIconDrawable="@drawable/ic_parameter"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextVlanId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:nextFocusDown="@id/editTextGroup"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonAppIdDesc"
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="48dp"
                android:backgroundTint="#2196F3"
                android:text="@string/common_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutGoose" />

            <Button
                android:id="@+id/buttonGcbDesc"
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/common_description"
                android:layout_marginEnd="40dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <Button
                android:id="@+id/buttonMacAddressDesc"
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="48dp"
                android:text="@string/common_description"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/buttonGcbDesc" />

            <Button
                android:id="@+id/buttonMaxTimeDesc"
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="48dp"
                android:text="@string/common_description"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/buttonMacAddressDesc" />

            <Button
                android:id="@+id/buttonMinTimeDesc"
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="48dp"
                android:text="@string/common_description"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/buttonMaxTimeDesc" />

            <Button
                android:id="@+id/buttonIpAddressDesc"
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:text="@string/common_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/buttonGcbDesc" />

            <Button
                android:id="@+id/buttonVlanIdDesc"
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="48dp"
                android:backgroundTint="#2196F3"
                android:text="@string/common_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAppId" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="32dp"
                android:paddingTop="16dp"
                android:paddingEnd="32dp"
                android:paddingBottom="16dp"
                android:text="@string/common_accept"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonMinTimeDesc" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>